[package]
name = "encrypt"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
aes = "0.8.4"
aes-gcm = { version = "0.10.3", features = ["std"] }
ctr = "0.9.2"
derive_more = { workspace = true, features = ["display", "from"] }
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.9.2"
sha2 = "0.10.9"
