[package]
name = "passwords"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
sha-crypt = { version = "0.5.0", default-features = false }
# alloc is needed for padding
cbc = { version = "0.1.0", default-features = false, features= ["alloc"] }
cipher = { version = "0.4.4", default-features = false, features = ["block-padding"] }
des = { version = "0.8.0", default-features = false }
base64 = { version = "0.21.0", default-features = false , features = ["std"]}
derive_more = { workspace = true, features = ["display", "from"] }
