[package]
name = "pypasswords"
version.workspace = true
edition = "2024"
license.workspace = true

[build-dependencies]
pyo3-build-config = { workspace = true }

[dependencies]
pyo3 = {workspace = true, "features" = ["abi3-py310"] }
passwords = { path = "../passwords" }

[lib]
crate-type = ["cdylib", "lib"]
