[package]
name = "pypasswords"
version.workspace = true
edition = "2024"
license.workspace = true

[build-dependencies]
pyo3-build-config = { workspace = true }

[dependencies]
pyo3 = { workspace = true, "features" = ["abi3-py310"] }
passwords = { path = "../passwords", default-features = false }

[features]
default = ["cbc", "sha512"]
cbc = ["passwords/cbc"]
sha512 = ["passwords/sha512"]

[lib]
crate-type = ["cdylib", "lib"]
