[package]
name = "pyvalidation"
version.workspace = true
edition = "2024"
license.workspace = true

[build-dependencies]
pyo3-build-config = { workspace = true }

[dependencies]
avdschema = { path = "../avdschema", features = ["dump_load_files"] }
included_store = { path = "../included_store" }
validation = { path = "../validation" }

derive_more = { workspace = true, features = ["display", "from"] }
log = { workspace = true }
pyo3 = { workspace = true, "features" = ["abi3-py310"] }
pyo3-log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision", # To support very big numbers
    "preserve_order",
] }
serde_yaml = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
