[package]
name = "validation"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
avdschema = { path = "../avdschema" }
derive_more = { workspace = true, features = ["display", "from"] }
ordermap = { workspace = true, features = ["serde"] }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision", # To support very big numbers
    "preserve_order",
] }
serde_yaml = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
