[package]
name = "yaml-parser"
version.workspace = true
edition = "2024"
license.workspace = true
description = "A YAML 1.2 parser with error recovery, span tracking, and multiple error collection"
repository = "https://github.com/aristanetworks/pyavd-utils"
keywords = ["yaml", "parser", "error-recovery", "span"]
categories = ["parsing", "text-processing"]

[dependencies]
chumsky = { version = "0.12.0" }

[dev-dependencies]

[lints]
workspace = true
