[package]
name = "yaml-parser"
version.workspace = true
edition = "2024"
license.workspace = true
description = "A YAML 1.2 parser with error recovery, span tracking, and multiple error collection"
repository = "https://github.com/aristanetworks/pyavd-utils"
keywords = ["yaml", "parser", "error-recovery", "span"]
categories = ["parsing", "text-processing"]

[dependencies]
derive_more = { workspace = true, features = ["display"] }

[dev-dependencies]
criterion = "0.8.2" # Used for benchmarking
saphyr = "0.0.6"    # Used for benchmarking

[[bench]]
name = "parser_bench"
harness = false

[lints]
workspace = true
